--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,15 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     
-    - run: |
+    - run:
         docker build . -t vsgheacr.azurecr.io/k8sdemo:${{ github.sha }}
+        
+    - uses: Azure/docker-login@v1
+      with:
+        login-server: vsgheacr.azurecr.io
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+    - run: 
         docker push vsgheacr.azurecr.io/k8sdemo:${{ github.sha }}
       
     # Set the target AKS cluster.
