--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,17 +9,14 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@master
-    - name: Docker Login 
-      env:
-        DOCKER_USER: ${{ secrets.REGISTRY_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
- #   - uses: Azure/docker-login@v1
- #     with:
- #       login-server: vsazurecr.azurecr.io
- #       username: ${{ secrets.REGISTRY_USERNAME }}
- #       password: ${{ secrets.REGISTRY_PASSWORD }}
-    - name: Docker Login
-      run: |
+      
+    - uses: Azure/docker-login@v1
+      with:
+        login-server: vsazurecr.azurecr.io
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+
+        run: |
          docker build . -t vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
          docker push vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
 # Set the target AKS cluster.
