--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,29 @@
-on: [push]
-
+name: Build
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@master
-      # Testing
+    
     - uses: Azure/docker-login@v1
       with:
-        login-server: vsazurecr.azurecr.io
+        login-server: vsgheacr.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
-
     - run: |
-         docker build . -t vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
-         docker push vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
-# Set the target AKS cluster.
+        #docker build . -t vsgheacr.azurecr.io/vsdotnetapp:dev1.1
+        #docker push vsgheacr.azurecr.io/vsdotnetapp:dev1.1
+        docker build -t vsdotnetapp .
+        docker tag vsdotnetapp vsgheacr.azurecr.io/vsdotnetapp
+        docker push vsgheacr.azurecr.io/vsdotnetapp:dev1
+        #docker build . -t samplegroupacr.azurecr.io/csharp:1.2.2
+              
+    # Set the target AKS cluster.
     - uses: Azure/aks-set-context@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
@@ -24,7 +32,7 @@ jobs:
         
     - uses: Azure/k8s-create-secret@v1
       with:
-        container-registry-url: vsazurecr.azurecr.io
+        container-registry-url: vsgheacr.azurecr.io
         container-registry-username: ${{ secrets.REGISTRY_USERNAME }}
         container-registry-password: ${{ secrets.REGISTRY_PASSWORD }}
         secret-name: demo-vsdotnetapp-secret
@@ -35,6 +43,6 @@ jobs:
           manifests/deployment.yml
           manifests/service.yml
         images: |
-          vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
+          demo.azurecr.io/k8sdemo:${{ github.sha }}
         imagepullsecrets: |
           demo-vsdotnetapp-secret
