--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-       docker build . -t vsgheacr.azurecr.io/vsdotnetapp:${{ github.sha }}
-       docker push vsgheacr.azurecr.io/vsdotnetapp:${{ github.sha }}
+       docker build . -t vsgheacr.azurecr.io/vsdotnetapp:1.0.0
+       docker push vsgheacr.azurecr.io/vsdotnetapp:1.0.0
   #    docker build -t vsdotnetapp .
   #    docker tag vsdotnetapp vsgheacr.azurecr.io/vsdotnetapp
   #    docker push vsgheacr.azurecr.io/vsdotnetapp:dev1
@@ -39,6 +39,6 @@ jobs:
           manifests/deployment.yml
           manifests/service.yml
         images: |
-          vsgheacr.azurecr.io/vsdotnetapp:${{ github.sha }}
+          vsgheacr.azurecr.io/vsdotnetapp:1.0.0
         imagepullsecrets: |
           demo-vsdotnetapp-secret
