--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ jobs:
 
     - uses: Azure/docker-login@v1
       with:
-        login-server: vsgheacr.azurecr.io
+        login-server: vsazurecr.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
+  
        docker build . -t vsazurecr.azurecr.io/vsdotnetapp:1.0.0
        docker push vsazurecr.azurecr.io/vsdotnetapp:1.0.0
   #    docker build -t vsdotnetapp .
