--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,11 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-  
-       docker build . -t vsazurecr.azurecr.io/vsdotnetapp:1.0.0
-       docker push vsazurecr.azurecr.io/vsdotnetapp:1.0.0
-  #    docker build -t vsdotnetapp .
-  #    docker tag vsdotnetapp vsgheacr.azurecr.io/vsdotnetapp
-  #    docker push vsgheacr.azurecr.io/vsdotnetapp:dev1
+        docker build -t vsdotnetapp .
+        docker tag vsdotnetapp vsazurecr.azurecr.io/vsdotnetapp
+        docker push vsazurecr.azurecr.io/vsdotnetapp:dev1
+  #    docker build . -t vsazurecr.azurecr.io/vsdotnetapp:1.0.0
+  #    docker push vsazurecr.azurecr.io/vsdotnetapp:1.0.0
   #    docker build . -t samplegroupacr.azurecr.io/csharp:1.2.2
               
     # Set the target AKS cluster.
