--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
         docker build -t vsdotnetapp .
-        docker tag vsdotnetapp vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
-        docker push vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
+        docker tag vsdotnetapp vsazurecr.azurecr.io/vsdotnetapp:v1.1
+        docker push vsazurecr.azurecr.io/vsdotnetapp:v1.1
   #    docker build . -t vsazurecr.azurecr.io/vsdotnetapp:1.0.0
   #    docker push vsazurecr.azurecr.io/vsdotnetapp:1.0.0
   #    docker build . -t samplegroupacr.azurecr.io/csharp:1.2.2
@@ -39,6 +39,7 @@ jobs:
           manifests/deployment.yml
           manifests/service.yml
         images: |
-          vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
+            vsazurecr.azurecr.io/vsdotnetapp:v1.1
+            #      vsazurecr.azurecr.io/vsdotnetapp:${{ github.sha }}
         imagepullsecrets: |
           demo-vsdotnetapp-secret
